--- a/扑克牌/ConsoleApplication1/扑克牌.csproj
+++ b/扑克牌/ConsoleApplication1/扑克牌.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C393E721-52A0-4402-B82E-C692D74F1BD8}</ProjectGuid>
+    <ProjectGuid>{CB1DCAE1-5BD3-4417-B39D-DC46AA1698A3}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_1128</RootNamespace>
-    <AssemblyName>1128</AssemblyName>
+    <RootNamespace>ConsoleApplication1</RootNamespace>
+    <AssemblyName>ConsoleApplication1</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
